# ragcheck

./: .gitignore  BITACORA.md  CLAUDE.md  EXPLORACION_resultados.md  GUIA_TFG_ALUCINACIONES.md  README.md  literatura_RAGTRUTH.md  pyproject.toml
.claude/commands/: aprende-estilo.md
.github/workflows/: ci.yml
exploration/: README.md  efficacy_by_generator.py  error_analysis.py  eval_rfe_models.py  feature_pruning.py  feature_redundancy.py  feature_selection.py  feature_selection_wrappers.py  figs_por_tarea.py  figuras_11feat.py  figuras_conceptuales.py  figuras_informe.py  figuras_v2_informe.py  global_thresholds.py  global_thresholds_18.py  grid_tables.py  imbalance_thresholds.py  lsa_swap_probe.py  per_task_models.py  resampling_check.py  resampling_per_task.py  resampling_per_task_aucpr.py  resampling_vs_threshold.py  rfe_ranking.py  rfe_top10.py  rfecv_check.py  rfecv_full.py  roc_curve_top7.py  seleccion_rfe_codo.py  self_consistency_probe.py  smote_check.py  spacy_features_probe.py  tfidf_vs_containment.py  threshold_calibration_per_task.py  threshold_ceiling_by_generator.py  threshold_sweep.py  thresholds_pr.py  top10_correlation_and_curve.py  weak_supervision_frase.py  weak_supervision_hibrido.py
outputs/informe_resultados/: .gitignore  citas_retiradas.md  (+6 more)
scripts/: compare_models.py  evaluate_test.py  figuras_roc_pr_rfe.py  knn.py  log_reg.py  outliers_boxplot.py  random_forest.py  spans_analysis.py  svm.py  visualization.py  xgb.py
tests/: test_data.py  test_determinism.py  test_features.py  test_no_leakage.py  test_spans.py  test_training.py
(+30 files in other folders)
