[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragcheck"
version = "0.1.0"
description = "Detección de alucinaciones en RAG con ML clásico y features léxicas."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Raquel García Hernández" }]
license = { text = "MIT" }
dependencies = [
    "scikit-learn",
    "xgboost",
    "datasets",
    "pandas",
    "numpy",
    "scipy",
    "joblib",
    "seaborn",
    "matplotlib",
    "spacy",
    "tabulate",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "nbconvert", "ipykernel", "ruff"]

[project.scripts]
ragcheck = "ragcheck.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
